# WebScraping_MEV

./: .gitignore  main.py  pyproject.toml  set_index_historical_data.xlsx  table_1.xlsx  table_2.xlsx  table_3.xlsx  table_4.xlsx  testlink.py  thailand_housing_index.xlsx
