[project]
name = "webscraping-mev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "selenium>=4.39.0",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
